# commander

./: .gitignore  README.md  mypy.ini  pyproject.toml
src/commander/: __main__.py  config.py
src/commander/actions/: init.py  script.py
src/commander/core/: exceptions.py  help.py
tests/actions/: test_init.py
