[tool.poetry]
name = "commander"
version = "0.1.0"
description = ""
authors = ["Gabriel Fonseca <fonsecacrz7@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
mypy = "^0.910"
isort = "^5.9.1"
black = "^21.6b0"
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
